--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=College Cycling
-#spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_db
-spring.datasource.url=jdbc:mysql://college-cycling.cr00c2ya4mzt.eu-north-1.rds.amazonaws.com:3306/ecommerce_db
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_db
+#spring.datasource.url=jdbc:mysql://college-cycling.cr00c2ya4mzt.eu-north-1.rds.amazonaws.com:3306/ecommerce_db
 spring.datasource.username=root
-spring.datasource.password=root1234
+#spring.datasource.password=root1234
+spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
@@ -18,9 +19,9 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
-aws.access.key=AKIA42NHW3PEJLWCA76V
-aws.secret.key=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
-aws.region=eu-north-1
-aws.s3.bucket.images=college-cycling
+#aws.access.key=AKIA42NHW3PEJLWCA76V
+#aws.secret.key=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
+#aws.region=eu-north-1
+#aws.s3.bucket.images=college-cycling
 
-server.port = 5000
+#server.port = 5000
