--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,9 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=94312rajaryan@gmail.com
+spring.mail.username=${MAIL_USERNAME}
 #spring.mail.password=hodorrxawzonaacv
-spring.mail.password=etuwlskzoblnijvg
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
